Time: 6 ms (71.59%), Space: 45.3 MB (39.17%) - LeetHub